--- a/index.html
+++ b/index.html
@@ -639,10 +639,16 @@
           <!--Contact-->
     
           <!--Footer-->
-          <footer>
+          <footer style="color:white; background-color: black;
+          height:125px;">
             <div class="container">
               <div class="row text-center">
                 <div class="col-md-12">
+                  <p style="margin-top:24px;"><b>Site by</b>b> 
+                    <a href="https://moondoglimited.com">
+                      <img src="images/logo.png" width="136px" />
+                    </a>
+                  </p>
                   <p class="copyright">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
