--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
             <div class="container">
               <div class="row text-center">
                 <div class="col-md-12">
-                  <p style="margin-top:24px;"><b>Site by</b>b> 
+                  <p style="margin-top:24px;"><b>Site by </b>
                     <a href="https://moondoglimited.com">
                       <img src="images/logo.png" width="136px" />
                     </a>
